# ghcjs-webgl

./: .gitignore  Main.hs  README.md  ghcjs-webgl.cabal  stack.yaml
Javascript/: WebGL.hs
Javascript/WebGL/: Const.hs  Raw.hs  Types.hs
Main.jsexe/: all.js  index.html  lib.js  lib.js.files  lib1.js  lib1.js.files  out.js  out.stats  rts.js
jsbits/: array.js
src/Data/: TypedArray.hs
src/Data/TypedArray/: IO.hs  Internal.hs  ST.hs  Types.hs
src/GHCJS/: WebGL.hs
src/GHCJS/WebGL/: Const.hs  Raw.hs  Types.hs
src/JavaScript/: WebGL.hs
src/JavaScript/WebGL/: Const.hs  Raw.hs  Types.hs
src/JsHs/: WebGL.hs
src/JsHs/WebGL/: Const.hs  Raw.hs  Types.hs
test/: SimpleWebGL.hs
