name: ghcjs-webgl
version: 0.3
cabal-version: >=1.22
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: GHCJS WebGL binding
description:
    Minimalistic, yet (hopefully) fully functional WebGL binding.
    All functions are in one-to-one correspondence.
    Updated to fit ghcjs-base-0.2.* .
category: OpenGL, WebGL, GHCJS
author: Artem Chirkin

library
    exposed-modules:
        GHCJS.WebGL
        GHCJS.WebGL.Raw
        GHCJS.WebGL.Const
        GHCJS.WebGL.Types
    build-depends:
        base >=4.2 && <5,
        ghcjs-base ==0.2.*
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite SimpleWebGL
    type: exitcode-stdio-1.0
    main-is: SimpleWebGL.hs
    build-depends:
        base >=4.2 && <5,
        ghcjs-base ==0.2.*
    default-language: Haskell2010
    hs-source-dirs: test src
    ghc-options: -Wall
