name: ghcjs-webgl
version: 0.4
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: GHCJS WebGL binding
description:
    Minimalistic, yet (hopefully) fully functional WebGL binding.
    All functions are in one-to-one correspondence.
    This package depends on ghcjs-hs-interop available on github:
    https://github.com/achirkin/qua-kit (libs/hs/ghcjs-hs-interop)
category: OpenGL, WebGL, GHCJS
author: Artem Chirkin

source-repository head
  type:     git
  location: https://github.com/achirkin/ghcjs-webgl

library
    exposed-modules:
        JsHs.WebGL
        JsHs.WebGL.Raw
        JsHs.WebGL.Const
        JsHs.WebGL.Types
    build-depends:
        base >=4.2 && <5,
        ghcjs-hs-interop -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans

test-suite SimpleWebGL
    type: exitcode-stdio-1.0
    main-is: SimpleWebGL.hs
    build-depends:
        base >=4.2 && <5,
        ghcjs-hs-interop -any
    default-language: Haskell2010
    hs-source-dirs: test src
    ghc-options: -Wall -ferror-spans
