name: ghcjs-webgl
version: 0.6
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: http://ia.arch.ethz.ch/
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: GHCJS WebGL binding
description:
    Minimalistic, yet fully functional WebGL binding.
    All functions are in one-to-one correspondence.
category: OpenGL, WebGL, GHCJS
author: Artem Chirkin

source-repository head
  type:     git
  location: https://github.com/achirkin/ghcjs-webgl

library
    exposed-modules:
        JavaScript.WebGL
        JavaScript.WebGL.Raw
        JavaScript.WebGL.Const
        JavaScript.WebGL.Types
    build-depends:
        base >=4.2 && <5,
        dimensions >=0.3,
        easytensor >=0.3,
        ghcjs-base >=0.2.0.0
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans

test-suite SimpleWebGL
    type: exitcode-stdio-1.0
    main-is: SimpleWebGL.hs
    build-depends:
        base >=4.2 && <5,
        dimensions >=0.3,
        easytensor >=0.3,
        ghcjs-webgl -any,
        ghcjs-base >=0.2.0.0
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -Wall -ferror-spans
